# file_host

./: .gitignore  Cargo.toml  Rocket.toml
migrations/: 20220101215226_create_apikeys_table.down.sql  20220101215226_create_apikeys_table.up.sql  20220101215230_create_file_table.down.sql  20220101215230_create_file_table.up.sql
src/: error.rs  files.rs  main.rs
src/api/: key.rs  mod.rs
src/api/routes/files/: mod.rs
src/db/: mod.rs  models.rs
src/error/: mod.rs
upload/: e8c3e6bd-f744-4857-83f7-82a0d35b7564.
